See the end for copying conditions.

Note that changes to the GNU SASL Library is documented in lib/NEWS.
This file track changes to the remaining, non-library, parts of GNU
SASL.  That include the manual, the command line tool, and self tests.

* Version 1.3 (unreleased)

** tests: Rewrite basic self test using modern API.

* Version 1.2 (released 2009-06-13)

** gsasl: Fix out of bounds write when in IMAP/SMTP mode.
Reported by Enrico Scholz <enrico.scholz@informatik.tu-chemnitz.de> in
<http://thread.gmane.org/gmane.comp.gnu.gsasl.general/230>.

** doc: Rewritten introduction material.

** doc: Improved sections for the info manual.
We now follow the advice given by the texinfo manual on which
directory categories to use.  In particular, libgsasl moved from the
'GNU Libraries' section to the 'Software libraries' as GNU SASL, and
'Invoking gsasl' moved from 'GNU utilities' to 'Security'.

** examples: Removed unneeded 'ctx' parameter from client_authenticate.

** Building with many warning flags now requires --enable-gcc-warnings.
This avoids crying wolf for normal compiles.

** New configure parameters to set packaging specific information.
The parameters are --with-packager, --with-packager-version, and
--with-packager-bug-reports.  See
<http://article.gmane.org/gmane.comp.lib.gnulib.bugs/17791> for more
details.

* Version 1.1 (released 2009-03-25)

** gsasl: Reading integrity protected data from server now works.
Before it didn't decode data.

** gsasl: The --quality-of-protection parameter now works.
It was just a dummy before.  Only relevant for DIGEST-MD5.  Note that
the parameter value have been modified to match the library keywords.

** Only detect sufficiently recent GnuTLS versions.
Version 2.2.x or later is required.

* Version 1.0 (released 2009-01-23)

** gsasl: New parameter --priority to specify GnuTLS priority strings.
Can be used to change TLS settings, which may be needed to talk to
some servers.
