@@ -10,6 +10,8 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 ** tests: Rewrite basic self test using modern API.
 
+** tests: New self-test 'crypto' to increase code coverage.
+
 * Version 1.2 (released 2009-06-13)
 
 ** gsasl: Fix out of bounds write when in IMAP/SMTP mode.
